Fix Cable advertisement packet format

With new update on the Cable spec, the ordering of elements in
client/authenticator advertisement packets has changed. Update
FidoCableDiscovery accordingly.

Bug: 851004
Change-Id: Ib40ec3af1e10490ea80e8934403cd1a381319f83
Reviewed-on: https://chromium-review.googlesource.com/1093256
Commit-Queue: Jun Choi <hongjunchoi@chromium.org>
Reviewed-by: Jan Wilken Dörrie <jdoerrie@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566697}
Former-commit-id: d2ffb85b51ee471ed2e3c070c391fe5e212f880b